# compitition-monitor

./: .gitignore  pyproject.toml
data/: last_run.txt  monitor_state.json
data/competitions/: 10546.json  10658.json  10814.json  11107.json  11338.json  11639.json  11709.json  12891.json  12894.json  13374.json  13376.json  13658.json  14248.json  14290.json  14569.json  14618.json  14963.json  15281.json  15553.json  15590.json  15662.json  15769.json  15805.json  15830.json  16010.json  16027.json  16040.json  16100.json  16121.json  16195.json  16218.json  16261.json  16281.json  16299.json  16303.json  16306.json  16372.json  16375.json  16376.json  16444.json  (+45 more)
data/html/: 12891.html  13658.html  14248.html  14569.html  14618.html  15281.html  15553.html  16010.html  16027.html  16121.html  16195.html  16218.html  16261.html  16299.html  16306.html  16372.html  16376.html  16445.html  16614.html  16656.html  index.html
data/ori/: 10546.json  10658.json  10814.json  11107.json  11338.json  11639.json  11709.json  12891.json  12894.json  13374.json  13376.json  14248.json  14569.json  (+65 more)
docs/: 10546.html  10658.html  10814.html  11107.html  11338.html  11639.html  11709.html  12891.html  12894.html  13374.html  13376.html  14248.html  14290.html  14569.html  14618.html  14963.html  15553.html  15590.html  15662.html  15769.html  15805.html  15830.html  16010.html  16040.html  16100.html  16121.html  16195.html  16218.html  16261.html  16281.html  16299.html  16303.html  16306.html  16372.html  16375.html  16376.html  16444.html  16461.html  16614.html  16656.html  (+43 more)
(+13 files in other folders)
