[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "competition-monitor"
version = "0.1.0"
description = "24h 不间断 Codabench 竞赛监测机器人"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "python-dateutil>=2.9.0",
    "pydantic>=2.0.0",
]

[project.scripts]
competition-monitor = "competition_monitor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
